--- a/index.html
+++ b/index.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./assets/style.css" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/style.css" />
+        <title>Coding Quiz</title>
+    </head>
 
-  <title>Coding Quiz</title>
+    <body>
+        <!-- Page header -->
+        <header>
+            <h1>JavaScript Quiz</h1>
+        </header>
 
-</head>
-<body>
-	<div class="container">
-		<header>
-			<h1>Coding Quiz</h1>
-		</header>
-        <button id="start-button">Start Quiz</button>
-		<div id="quiz-container">
-            <div id="start-button"></div>
-			<div id="timer"></div>
-            <div id="quiz"></div>
-			<div id="question"></div>
-			<div id="choices"></div>
-			<div id="feedback"></div>
-			<div id="score"></div>
-            <div id="initials-input"></div>
-			<div id="submit-button"></div>
-			<div id="highscores-list"></div>
-			<div id="clear-button"></div>
-		</div>
+        <!-- Quiz container -->
+        <div class="quiz-container">
+            <!-- Quiz section -->
+            <section id="quiz">
+                <h2 id="question-number"></h2>
+                <h3 id="question"></h3>
+                <div id="choices"></div>
+                <p id="feedback"></p>
+                <p id="score"></p>
+            </section>
 
-		<footer>
-			<p>Time Left: <span id="timer"></span></p>
-		</footer>
-	</div>
+            <!-- Start quiz button -->
+            <button id="start-button">Start Quiz</button>
 
-  <script src="./script.js"></script>
-</body>
+            <!-- Timer -->
+            <div id="timer">Time: <span id="time-left"></span></div>
+        </div>
 
+        <!-- Game over container -->
+        <div id="game-over-container">
+            <!-- Game over message and final score -->
+            <h2>Quiz Over!</h2>
+            <p>Your final score is <span id="final-score"></span></p>
+
+            <!-- Initials form -->
+            <form id="initials-form">
+                <label for="initials">Enter your initials:</label>
+                <input type="text" id="initials-input" name="initials" maxlength="3" />
+                <button type="submit" id="submit-button">Submit</button>
+            </form>
+
+            <!-- Restart quiz button -->
+            <button id="restart-button">Restart Quiz</button>
+        </div>
+
+        <!-- JavaScript -->
+        <script src="./script.js"></script>
+    </body>
 </html>
