--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <!-- Page header -->
         <header>
-            <h1>JavaScript Quiz</h1>
+            <h1>Coding Quiz</h1>
         </header>
 
         <!-- Quiz container -->
