Updated quiz on html, css and js

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <div id="timer">Time: <span id="time-left"></span></div>
         </div>
 
-        <!-- Game over container -->
-        <div id="game-over-container">
-            <!-- Game over message and final score -->
+        <!-- Quiz over container -->
+        <div id="quiz-over-container">
+            <!-- Quiz over message and final score -->
             <h2>Quiz Over!</h2>
             <p>Your final score is <span id="final-score"></span></p>
 
