Updated js code removed questions

--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
             <h2>Quiz Over!</h2>
             <p>Your final score is <span id="final-score"></span></p>
 
-
+            <!-- Initials form -->
+            <form id="initials-form">
+                <label for="initials">Enter your initials:</label>
+                <input type="text" id="initials-input" name="initials" maxlength="3" />
+                <button type="submit" id="submit-button">Submit</button>
+            </form>
 
             <!-- Restart quiz button -->
             <button id="restart-button">Restart Quiz</button>
